--- a/src/app/setting/setting.component.html
+++ b/src/app/setting/setting.component.html
@@ -22,16 +22,18 @@
 				</div>
 				<div class="col-md-6">
 					<mat-form-field class="w-100">
-						<input matInput type="number" [(ngModel)]="userData.phone" name="mobile" placeholder="Mobile Number" required>
+						<input matInput type="text" maxlength="10" OnlyNumber="true" [(ngModel)]="userData.phone" name="mobile" placeholder="Mobile Number" required>
+						<mat-hint>Please enter your number without 0.</mat-hint>
+						<mat-hint align="end">{{userData.phone.length}}/10</mat-hint>
 					</mat-form-field>
 				</div>
 				<div class="col-md-6">
 					<mat-form-field class="w-100">
-						<input matInput type="text" [(ngModel)]="userData.age" name="age" placeholder="Age" required>
+						<input matInput maxlength="3" OnlyNumber="true" type="text" [(ngModel)]="userData.age" name="age" placeholder="Age" required>
 					</mat-form-field>
 				</div>
 				<div class="col-md-6 text-right">
-					<button mat-raised-button color="primary" class="mt-2">Update</button>
+					<button mat-raised-button (click)="updateProfile()" color="primary" class="mt-2">Update</button>
 				</div>
 			</div>
 		</div>
@@ -62,3 +64,6 @@
 	</div>
 	<app-footer></app-footer>
 </section>
+<div *ngIf="showLoader" style="position: fixed; z-index: 1003; left: 0; top: 0; bottom: 0; right: 0; background: #bfbfbf75; opacity: 1;">
+	<img id="loadinggif" src="assets/images/load.gif" style="width: 100px; height: 100px; position: absolute; top: 50%; left: 50%; margin: -28px 0 0 -25px;">
+</div>
