--- a/src/app/setting/setting.component.html
+++ b/src/app/setting/setting.component.html
@@ -43,21 +43,21 @@
 			<div class="row mx-0">
 				<div class="col-md-6">
 					<mat-form-field class="w-100">
-						<input matInput type="password" name="oldPassword" placeholder="Old Password">
+						<input matInput type="password" name="oldPassword" placeholder="Old Password" [(ngModel)]="updatePassword.old" required>
 					</mat-form-field>
 				</div>
 				<div class="col-md-6">
 					<mat-form-field class="w-100">
-						<input matInput type="password" name="oldPassword" placeholder="New Password">
+						<input matInput type="password" name="oldPassword" placeholder="New Password" [(ngModel)]="updatePassword.Password" required>
 					</mat-form-field>
 				</div>
 				<div class="col-md-6">
 					<mat-form-field class="w-100">
-						<input matInput type="password" name="oldPassword" placeholder="Confirm Password">
+						<input matInput type="password" name="oldPassword" placeholder="Confirm Password" [(ngModel)]="updatePassword.confirmPassword" required>
 					</mat-form-field>
 				</div>
 				<div class="col-md-6 text-right">
-					<button mat-raised-button color="primary" class="mt-2">Update Password</button>
+					<button mat-raised-button color="primary" class="mt-2" (click)="changePassword()">Update Password</button>
 				</div>
 			</div>
 		</div>
