--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -14,7 +14,7 @@
 			</div>
 			<div class="form-group col-12">
                 <mat-form-field class="w-100">
-                    <input matInput type="text" maxlength="10" OnlyNumber="true" name="number"  placeholder="Phone Number" [(ngModel)]="signupObj.mobileNumber" required>
+                    <input matInput type="text" maxlength="10" OnlyNumber="true" name="number"  placeholder="Phone Number" [(ngModel)]="signupObj.phone" required>
                 </mat-form-field>
             </div>
 			<div class="form-group col-12">
