--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,7 +9,7 @@
 			</div>
 			<div class="form-group col-12">
 				<mat-form-field class="w-100">
-					<input matInput type="password" name="password" placeholder="Password" [(ngModel)]="loginObj.password">
+					<input matInput type="password" name="password" placeholder="Password" [(ngModel)]="loginObj.Password">
 				</mat-form-field>
 			</div>
 			<div class="form-group col-12">
