--- a/src/app/admin-add-movies/admin-add-movies.component.html
+++ b/src/app/admin-add-movies/admin-add-movies.component.html
@@ -90,7 +90,7 @@
 						</tbody>
 						<tfoot>
 							<tr>
-								<td colspan="7" *ngIf="allMovies.length <= 0">No Records Found</td>
+								<td colspan="7" *ngIf="allMovies.length <= 0" class="text-left">No Records Found</td>
 							</tr>
 						</tfoot>
 					</table>
