--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,4 +1,4 @@
-<div class="mainLogCon py-5">
+ <div class="mainLogCon py-5">
 	<div class="loginCon">
 		<h2 class="mb-4">Sign Up</h2>
 		<div class="row">
@@ -48,7 +48,7 @@
 				</mat-radio-group>
 			</div>
 			<div class="form-group col-12">
-				<button mat-raised-button class="mt-2 thBtn w-100" color="primary" (click)="registerUser()">Register</button>
+				<button mat-raised-button id="sBtn" class="mt-2 thBtn w-100" color="primary" (click)="registerUser()">Register</button>
 			</div>
 			<div class="form-group col-12 text-left">
 				<p>Already have an account? <a class="thLink" [routerLink]="['/login']" title="Login">login here</a></p>
