--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,7 +13,7 @@
 				</mat-form-field>
 			</div>
 			<div class="form-group col-12">
-				<button mat-raised-button (click)="loginUser()" class="mt-2 thBtn w-100" color="primary">Login</button>
+				<button id="lBtn" mat-raised-button (click)="loginUser()" class="mt-2 thBtn w-100" color="primary">Login</button>
 			</div>
 			<div class="form-group col-12 text-left">
 				<p>Don't have a account? <a class="thLink" [routerLink]="['/signUp']" title="Sign Up">Signup</a></p>
