--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -6,8 +6,7 @@
 		<div class="row">
 			<div class="col-12">
 				<div class="row">
-					<div class="col-md-4"></div>
-					<div class="col-md-3">
+					<div class="col-md-3 offset-md-4">
 						<mat-form-field class="w-100">
 							<mat-select placeholder="Select Category" [(ngModel)]="movieListObj.categoryId">
 								<mat-option *ngFor = "let c of allCategories" [value]="c.id">{{c.categoryName}}</mat-option>
