--- a/src/app/user-dash/user-dash.component.html
+++ b/src/app/user-dash/user-dash.component.html
@@ -4,6 +4,13 @@
 		<h2 class="text-left"><i class="fa fa-bar-chart headIcon"></i>Dashboard</h2>
 		<hr class="headSep">
 		<div class="row">
+			<div class="col-4">
+				<mat-form-field>
+					<mat-select placeholder="Select Time Period">
+						<mat-option *ngFor="let row of timePeriod" value="{{row.id}}">{{row.timePeriod}}</mat-option>
+					</mat-select>
+				</mat-form-field>
+			</div>
 			<div class="col-12">
 				<div class="card shadow form-group p-3">
 					<div class="d-block">
@@ -40,3 +47,6 @@
 	</div>
 	<app-footer></app-footer>
 </section>
+<div *ngIf="showLoader" style="position: fixed; z-index: 1003; left: 0; top: 0; bottom: 0; right: 0; background: #bfbfbf75; opacity: 1;">
+	<img id="loadinggif" src="assets/images/load.gif" style="width: 100px; height: 100px; position: absolute; top: 50%; left: 50%; margin: -28px 0 0 -25px;">
+</div>
