--- a/src/app/view-grades/view-grades.component.html
+++ b/src/app/view-grades/view-grades.component.html
@@ -33,20 +33,20 @@
 			</div>
 			<div class="col-md-8">
                 <ul *ngIf="pager.pages && pager.pages.length" class="pagination">
-	                <li [ngClass]="{disabled:pager.currentPage === 1}">
-	                    <a class="page-link" (click)="setPage(1)">First</a>
+	                <li class="page-item" [ngClass]="{disabled:pager.currentPage === 1}">
+	                    <a class="page-link rounded-left" (click)="setPage(1)" matTooltip="First Page"><i class="fa fa-fast-backward"></i></a>
 	                </li>
-	                <li [ngClass]="{disabled:pager.currentPage === 1}">
-	                    <a class="page-link" (click)="setPage(pager.currentPage - 1)">Previous</a>
+	                <li class="page-item" [ngClass]="{disabled:pager.currentPage === 1}">
+	                    <a class="page-link" (click)="setPage(pager.currentPage - 1)" matTooltip="Prev Page"><i class="fa fa-step-backward"></i></a>
 	                </li>
-	                <li *ngFor="let page of pager.pages" [ngClass]="{active:pager.currentPage === page}">
+	                <li class="page-item" *ngFor="let page of pager.pages" [ngClass]="{active:pager.currentPage === page}">
 	                    <a class="page-link" (click)="setPage(page)">{{page}}</a>
 	                </li>
-	                <li [ngClass]="{disabled:pager.currentPage === pager.totalPages}">
-	                    <a class="page-link" (click)="setPage(pager.currentPage + 1)">Next</a>
+	                <li class="page-item" [ngClass]="{disabled:pager.currentPage === pager.totalPages}">
+	                    <a class="page-link" (click)="setPage(pager.currentPage + 1)" matTooltip="Next Page"><i class="fa fa-step-forward"></i></a>
 	                </li>
-	                <li [ngClass]="{disabled:pager.currentPage === pager.totalPages}">
-	                    <a class="page-link" (click)="setPage(pager.totalPages)">Last</a>
+	                <li class="page-item" [ngClass]="{disabled:pager.currentPage === pager.totalPages}">
+	                    <a class="page-link rounded-right" (click)="setPage(pager.totalPages)" matTooltip="Last Page"><i class="fa fa-fast-forward"></i></a>
 	                </li>
                 </ul>
             </div>
