--- a/src/app/setting/setting.component.html
+++ b/src/app/setting/setting.component.html
@@ -1,7 +1,7 @@
 <app-header (headerClassChange)="toggleMainSec()"></app-header>
 <section class="transition3ms UP_mainCon" [ngClass]="{'open': mainToggle}">
 	<div class="UP_con">
-		<h2 class="text-left"><i class="fa fa-cogs headIcon"></i>Add Movies</h2>
+		<h2 class="text-left"><i class="fa fa-cogs headIcon"></i>Edit Profile</h2>
 		<hr class="headSep">
 		<div class="card shadow py-3 my-4">
 			<div class="row mx-0">
