--- a/src/app/favorites/favorites.component.html
+++ b/src/app/favorites/favorites.component.html
@@ -20,7 +20,7 @@
 						<p class="cat"><span>{{m.category.categoryName}}</span></p>
 						<p>{{m.description}}</p>
 						<p><b>Director:</b>&nbsp;<span>{{m.director}}</span></p>
-						<p><b>Distributor:</b>&nbsp;<span>{{m.distribution}}</span></p>
+						<p><b>Distribution:</b>&nbsp;<span>{{m.distribution}}</span></p>
 					</div>
 				</div>
 			</div>
