--- a/src/app/user-dash/user-dash.component.html
+++ b/src/app/user-dash/user-dash.component.html
@@ -6,7 +6,7 @@
 		<div class="row">
 			<div class="col-4">
 				<mat-form-field>
-					<mat-select placeholder="Select Time Period" [(ngModel)]="timeId" (ngChange)="getTimePeriodDashBoarData()">
+					<mat-select placeholder="Select Time Period" [(ngModel)]="timeId" (ngModelChange)="getTimePeriodDashBoarData($event)">
 						<mat-option *ngFor="let row of timePeriod" [value]="row.id">{{row.timePeriod}}</mat-option>
 					</mat-select>
 				</mat-form-field>
