--- a/src/app/admin-dash/admin-dash.component.html
+++ b/src/app/admin-dash/admin-dash.component.html
@@ -4,6 +4,23 @@
 		<h2 class="text-left"><i class="fa fa-bar-chart headIcon"></i>Admin Dashboard</h2>
 		<hr class="headSep">
 		<div class="row">
+
+			<div class="col-4">
+				<mat-form-field>
+					<mat-select placeholder="Select Time Period" [(ngModel)]="timeperiodId" (ngModelChange)="getAllTimePeriodsDataById($event)">
+						<mat-option *ngFor="let row of timeperiod" value="{{row.id}}">{{row.timePeriod}}</mat-option>
+					</mat-select>
+				</mat-form-field>
+			</div>
+
+			<div class="col-12">
+				<div class="card shadow form-group p-3">
+					<div class="d-block">
+					  <canvas baseChart [datasets]="barChartDataTimePeriod" [labels]="barChartLabelsTimePeriod" [options]="barChartOptions"  [colors]="barColors" [legend]="barChartLegendTime" [chartType]="barChartType" ></canvas>
+					</div>
+				</div>
+			</div>
+
 			<div class="col-12">
 				<div class="card shadow form-group p-3">
 					<div class="d-block">
@@ -11,6 +28,7 @@
 					</div>
 				</div>
 			</div>
+
 		</div>
 		<div class="row">
 			<div class="col-md-4">
