--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -29,12 +29,12 @@
 			</div>
 			<div class="form-group col-6">
 				<mat-form-field class="w-100">
-					<input matInput type="password" name="password" placeholder="Password" [(ngModel)]="signupObj.password" required>
+					<input matInput type="password" name="password" placeholder="Password" minlength="6" [(ngModel)]="signupObj.password" required>
 				</mat-form-field>
 			</div>
 			<div class="form-group col-6">
 				<mat-form-field class="w-100">
-					<input matInput type="password" name="confirmPassword" placeholder="Confirm Password" [(ngModel)]="signupObj.confirmPassword" required>
+					<input matInput type="password" name="confirmPassword" placeholder="Confirm Password"  minlength="6" [(ngModel)]="signupObj.confirmPassword" required>
 				</mat-form-field>
 			</div>
 			<div class="row mx-0 w-100">
