--- a/src/app/user-dash/user-dash.component.html
+++ b/src/app/user-dash/user-dash.component.html
@@ -6,18 +6,28 @@
 		<div class="row">
 			<div class="col-4">
 				<mat-form-field>
-					<mat-select placeholder="Select Time Period" [(ngModel)]="timeId" (ngModelChange)="getTimePeriodDashBoarData($event)">
-						<mat-option *ngFor="let row of timePeriod" [value]="row.id">{{row.timePeriod}}</mat-option>
+					<mat-select placeholder="Select Time Period" [(ngModel)]="timeperiodId" (ngModelChange)="getAllTimePeriodsDataById($event)">
+						<mat-option *ngFor="let row of timeperiod" value="{{row.id}}">{{row.timePeriod}}</mat-option>
 					</mat-select>
 				</mat-form-field>
 			</div>
+
 			<div class="col-12">
 				<div class="card shadow form-group p-3">
 					<div class="d-block">
-						<canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions"  [colors]="barColors" [legend]="barChartLegend" [chartType]="barChartType" ></canvas>
+					  <canvas baseChart [datasets]="barChartDataTimePeriod" [labels]="barChartLabelsTimePeriod" [options]="barChartOptions"  [colors]="barColors" [legend]="barChartLegendTime" [chartType]="barChartType" ></canvas>
 					</div>
 				</div>
 			</div>
+
+			<div class="col-12">
+				<div class="card shadow form-group p-3">
+					<div class="d-block">
+					  <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions"  [colors]="barColors" [legend]="barChartLegend" [chartType]="barChartType" ></canvas>
+					</div>
+				</div>
+			</div>
+
 		</div>
 	</div>
 	<app-footer></app-footer>
