--- a/src/app/admin-dash/admin-dash.component.html
+++ b/src/app/admin-dash/admin-dash.component.html
@@ -29,6 +29,14 @@
 				</div>
 			</div>
 
+			<div class="col-12">
+				<div class="card shadow form-group p-3">
+					<div class="d-block">
+					  <canvas baseChart [datasets]="barChartDataAge" [labels]="barChartLabelsAge" [options]="barChartOptions"  [colors]="barColors" [legend]="barChartLegendAge" [chartType]="barChartType" ></canvas>
+					</div>
+				</div>
+			</div>
+			
 		</div>
 	</div>
 	<app-footer></app-footer>
