--- a/src/app/admin-add-movies/admin-add-movies.component.html
+++ b/src/app/admin-add-movies/admin-add-movies.component.html
@@ -112,6 +112,7 @@
 				<!-- Modal body -->
 				<div class="modal-body">
 					<p>Are you sure, You want to delete this Movie?</p>
+					<p><mat-checkbox [(ngModel)]="hardDelete" color="primary">Hard Delete!</mat-checkbox></p>
 				</div>
 
 				<!-- Modal footer -->
