--- a/src/app/view-grades/view-grades.component.html
+++ b/src/app/view-grades/view-grades.component.html
@@ -4,6 +4,18 @@
 		<h2 class="text-left"><i class="fa fa-calendar headIcon"></i>View Grades</h2>
 		<hr class="headSep">
 		<div class="row">
+			<div class="col-md-4">
+				<mat-form-field>
+					<input matInput type="text" name="title" placeholder="Search Title">
+				</mat-form-field>
+			</div>
+			<div class="col-md-4">
+				<mat-form-field>
+					<input matInput type="text" name="username" placeholder="Search Username">
+				</mat-form-field>
+			</div>
+		</div>
+		<div class="row">
 			<div class="col-12">
 				<div class="table-responsive">
 					<table class="table text-center">
