--- a/src/app/view-grades/view-grades.component.html
+++ b/src/app/view-grades/view-grades.component.html
@@ -6,12 +6,13 @@
 		<div class="row">
 			<div class="col-md-4">
 				<mat-form-field>
-					<input matInput type="text" name="title" placeholder="Search Title">
+					<input matInput type="text" name="title" placeholder="Search Title"
+					[(ngModel)] = "titleSearch" (ngModelChange)="nSearch(titleSearch, 'title')">
 				</mat-form-field>
 			</div>
 			<div class="col-md-4">
 				<mat-form-field>
-					<input matInput type="text" name="username" placeholder="Search Username">
+					<input matInput type="text" name="username" placeholder="Search Username" [(ngModel)] = "nameSearch" (ngModelChange)="nSearch(nameSearch, 'name')">
 				</mat-form-field>
 			</div>
 		</div>
