deleteMovies API fntEnd Button set on suggession

--- a/src/app/user-suggestions/user-suggestions.component.html
+++ b/src/app/user-suggestions/user-suggestions.component.html
@@ -35,8 +35,8 @@
 											<img src="{{sRow.photoUrl}}" class="img-fluid" style="height: 120px;width: 100px;" alt="Movies Poster">
 										</td>
 										<td class="align-middle">
-											<button mat-raised-button class="mr-2 mb-2 bg-success text-white" (click)="AcceptMovieModal(sRow.id)">Accept</button>
-											<button mat-raised-button color="warn" class="mb-2" (click)="RejectMovieModal(sRow.id)">Decline</button>
+											<button mat-raised-button class="mr-2 mb-2 bg-success text-white" style="width:90px" (click)="AcceptMovieModal(sRow.id)">Accept</button>
+											<button mat-raised-button color="warn" class="mr-2 mb-2" style="width:90px" (click)="RejectMovieModal(sRow.id)">Decline</button>
 										</td>
 									</tr>
 								</tbody>
