--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
 <footer class="footer">
-	<div class="text-center text-white">&copy; copyright to maksof</div>
+	<div class="text-center text-white">&copy; 2019. All rights reserved</div>
 </footer>
